# qru-quaternion-registerization

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt
experiments/: 01_gauge_validation.py  01_hidden_motion_diagnostics.py  02_readout_axis_comparison.py  02_readout_selection.py  03_coherent_registerization.py  03_registerization_precision.py  04_coherent_composition.py  04_qru_qaoa_case_study.py  05_multiseed_statistics.py  05_readout_generalization.py  06_bloch_register_diagnostic.py  _common.py  _plot_03_outputs.py  exp01_quaternion_bloch_consistency.py  exp02_meridian_orientation_loss.py  exp03_qru_quaternion_path.py  exp04_axis_selection.py  exp05_register_precision.py  exp06_readout_comparison.py  exp07_downstream_threshold.py  run_all.py
notebooks/: quaternion_diagnostic_qaoa_fr.ipynb
outputs/metadata/: 06_bloch_register_metadata.json  run_manifest.json
outputs/tables/: experiment_report.txt
paper/: main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  references.bib
src/qru_registerization/: __init__.py  amplitude_interface.py  axis_selection.py  bloch.py  coherent_register.py  fixed_point.py  gates.py  io.py  pipeline.py  qaoa_toy.py  quaternion_geometry.py  (+3 more)
tests/: test_axis_interface.py  test_axis_selection.py  test_coherent_composition.py  test_core_geometry.py  test_downstream_bound_grid.py  test_fixed_point.py  test_hidden_motion_axis.py  test_imports.py  test_pipeline.py  test_projector_identity.py  test_qae_interface.py  test_qaoa_case_study.py  test_quaternion_bloch.py  test_readout_geometry.py  test_uncomputation_grid.py
